components/Home/Faq/styles.module.scss
.faq {
    position: relative;
    .faqContainer {
        display: flex;
        flex-direction: column;

    }
    .faqItemContainer1 {
        .faqHeader {
            position: relative;
            width: 30vw;
            height: fit-content;
            margin-left: 7vw;

            @media (max-width: 768px) {
                width: 45vw;
            }

        }
    }
    .faqLotties {
        position: relative;
    }

    .hideText, .hideText2 {
        opacity: 0;
        pointer-events: none;
        transition: opacity 0.5s, color 0.5s ease-out;
        color: #FFFACC;
    }

    .faqLottieText, .hideText{
        position: absolute;
        top: 33%;
        left: 11%;
        width: 38vw;
        height: 50%;
        min-height: 50%;
        font-size: 1.2vw;
        padding: 1%;

        h2 {
            font-size: 1.5vw;
            font-weight: 600;
            margin-bottom: 1%;
            margin-top: 1.5%;
        }

        @media screen and (min-width: 1950px) {
            width: 730px;
            left: calc(49vw - 730px);
            font-size: 20px;
            h2 {
                font-size: 24px;
            }
        }
        @media (max-width: 900px) {
            top: 8%;
            width: 384px;
            left: calc(45vw - 192px);
            height: 80%;
            font-size: 14px;
            padding: 13px;
            background-color: #FFFACC;;
            h2 {
                font-size: 17px;
            }
        }
        @media (max-width: 430px) {
            top: 8%;
            width: 89vw;
            left: 0;
            font-size: 3.5vw;
            h2 {
                font-size: 3.7vw;
            }
        }
    }

    .faqLottieText2, .hideText2{
        position: absolute;
        top: 33%;
        right: 8%;
        width: 38vw;
        height: 50%;
        font-size: 1.2vw;
        padding: 1%;

        h2 {
            font-size: 1.5vw;
            font-weight: 600;
            margin-bottom: 1%;
            margin-top: 1.5%;
        }

        @media screen and (min-width: 1950px) {
            width: 730px;
            right: calc(47.5vw - 730px);
            font-size: 20px;
            h2 {
                font-size: 24px;
            }
        }
        @media (max-width: 900px) {
            display: none;
        }
    }

    .faqLottieText, .faqLottieText2 {
        transition: opacity 0.5s, color 0.5s ease-out;
        opacity: 1;
        color: #0F4041;
    };

    .image {
        position: absolute;
        bottom: 0;
        left: 0;
        max-width: 100%;

        @media screen and (max-width: 900px) {
            padding: 5%;
        }
    }

    .faqSpellbook {
        display: flex;
        justify-content: center;
        align-items: center;
        position: relative;
        height: fit-content;
        width: 100%;
        // transform: scale(0.9);
        margin: auto;
        top: -30vh;

        @media screen and (max-width: 1440px) {
            top: -18vh;
        }
        @media screen and (max-width: 1025px){
            top: -18vh;
        }
        @media screen and (max-width: 900px) {
            top: -20vh;
        }
    

        g[id="general"], g[id="before"], g[id="during"], g[aria-label="GENERAL"], g[aria-label="BEFORE"], g[aria-label="DURING"] {
            cursor: pointer;
        }

    }

    .faqScroll {
        display: flex;
        justify-content: center;
        align-items: center;
        position: relative;
        height: fit-content;
        width: 90%;
        min-width: 90%;
        margin: auto;

    }
    
}

